[package]
name = "elfpromote"
version = "0.1.0"
edition = "2021"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
description = "Promote ELF shared library load order."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.5.2"
anyhow = "1"
structopt = "0.3.26"
log = "0.4"
pretty_env_logger = "0.4"
byteorder = "1.4.3"
memmap2 = "0.5.5"
atomicwrites = "0.3.1"
